Fix spacing on article signoff

--- a/src/_assets/css/components/_signoff.css
+++ b/src/_assets/css/components/_signoff.css
@@ -42,5 +42,7 @@
 }
 
 .signoff-body {
+	margin-block-start: 0.25em;
+
 	text-wrap: balance;
 }
